# chess-trainer-site

./: .env
.github/workflows/: main.yml
chess-dojo/: App.tsx  Space.tsx  babel.config.js  graphql-schema.json  package.json  tsconfig.json
chess-dojo-server/: Cargo.toml
chess-dojo-server/src/: main.rs
chess-dojo/__generated__/: globalTypes.ts
chess-dojo/src/: TopNav.tsx  design.tsx  styles.tsx
chess-dojo/src/chessboard/: Chessboard.tsx
chess-dojo/src/chessboard/pieces/: BishopBlackIcon.tsx  BishopWhiteIcon.tsx  KingWhiteIcon.tsx  KnightWhiteIcon.tsx  QueenBlackIcon.tsx  QueenWhiteIcon.tsx  RookBlackIcon.tsx
chess-dojo/src/graphql/: GraphqlProvider.tsx  queries.tsx
server/: Cargo.toml  todo.md
server/src/: config.rs  endpoint_types.rs  guards.rs  main.rs  oauth.rs  schema.rs  server.rs
site/: .dockerignore  App.tsx  Dockerfile  app.config.js  app.json  deploy.yml  fen  nginx.conf  package.json  t.json
site/nginx/: nginx.conf
site/nginx/conf.d/: default.conf
site/src/: ExchangeRate.tsx  Space.tsx  client.tsx  design.tsx  store.tsx  styles.tsx
site/src/chessboard/: Chessboard.tsx
site/src/chessboard/pieces/: KnightBlackIcon.tsx  RookWhiteIcon.tsx
site/src/components/: AuthSuccess.tsx  Button.tsx  Home.tsx  MoveList.tsx  VisualizationTraining.tsx
site/src/graphql/: GraphqlProvider.tsx  mocks.tsx  schema.tsx
site/src/graphql/__generated__/: GetCommunityRepertoires.ts  (+1 more)
site/src/types/: ChessboardBiref.tsx
site/src/utils/: frisbee.tsx  rest.tsx  useComponentLayout.tsx  useEffectWithPrevious.tsx
site/templates/: default.conf.template
