[package]
name = "chess-dojo-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
chrono = "0.4.19"
clap = "2.33.3"
color-eyre = "0.5.11"
dotenv = "0.15.0"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
fern = "0.6.0"
juniper = "0.15.7"
juniper_rocket = "0.8.0"
log = "0.4.14"
oauth2 = "4.1.0"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_oauth2 = { git = "https://github.com/jebrosen/rocket_oauth2", branch = "next" }

serde = "1.0.130"
serde_json = "1.0.66"
thiserror = "1.0.28"
url = "2.2.2"
uuid = "0.8.2"
